feat: update image values to support arm64

--- a/mongodb/values.yaml
+++ b/mongodb/values.yaml
@@ -127,7 +127,7 @@ diagnosticMode:
 image:
   registry: ghcr.io
   repository: zcube/bitnami-compat/mongodb
-  tag: latest
+  tag: 6.0
   digest: ""
   ## Specify a imagePullPolicy
   ## ref: https://kubernetes.io/docs/user-guide/images/#pre-pulling-images
