feat: remove arbiter

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1352,7 +1352,7 @@ arbiter:
   ## @param arbiter.enabled Enable deploying the arbiter
   ##   https://docs.mongodb.com/manual/tutorial/add-replica-set-arbiter/
   ##
-  enabled: true
+  enabled: false
   ## @param arbiter.hostAliases Add deployment host aliases
   ## https://kubernetes.io/docs/concepts/services-networking/add-entries-to-pod-etc-hosts-with-host-aliases/
   ##
