--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -403,69 +403,88 @@ initdbScripts:
   my_init_script.js: |
     db = db.getSiblingDB("cob");
     db.image_builder.drop();
-    
     db.challenge_builder.drop();
     db.process_engine.drop();
 
     db.image_builder.insertMany([
-      {
-        corId: "im123",
-        creatorName: "cs302",
-        imageName: "first_image",
-        imageRegistryLink: "gitlab.com/first_image:latest",
-        s3Path: "path/first_image.txt"
-      },
-      {
-        corId: "im124",
-        creatorName: "cs302",
-        imageName: "another_image",
-        imageRegistryLink: "gitlab.com/another_image:latest",
-        s3Path: "path/second_image.txt"
-      },
+      {"corId": "653b2e8cea6d1925edee6376", "creatorName": "cs302", "imageName": "image_0", "imageRegistryLink": "gitlab.com/image_0:latest", "s3Path": "path/image_0.txt"}, 
+      {"corId": "653b2e8cea6d1925edee6377", "creatorName": "cs302", "imageName": "image_1", "imageRegistryLink": "gitlab.com/image_1:latest", "s3Path": "path/image_1.txt"}, 
+      {"corId": "653b2e8cea6d1925edee6378", "creatorName": "cs302", "imageName": "image_2", "imageRegistryLink": "gitlab.com/image_2:latest", "s3Path": "path/image_2.txt"}, 
+      {"corId": "653b2e8cea6d1925edee6379", "creatorName": "cs302", "imageName": "image_3", "imageRegistryLink": "gitlab.com/image_3:latest", "s3Path": "path/image_3.txt"}, 
+      {"corId": "653b2e8cea6d1925edee637a", "creatorName": "cs302", "imageName": "image_4", "imageRegistryLink": "gitlab.com/image_4:latest", "s3Path": "path/image_4.txt"}, 
+      {"corId": "653b2e8cea6d1925edee637b", "creatorName": "cs302", "imageName": "image_5", "imageRegistryLink": "gitlab.com/image_5:latest", "s3Path": "path/image_5.txt"}, 
+      {"corId": "653b2e8cea6d1925edee637c", "creatorName": "cs302", "imageName": "image_6", "imageRegistryLink": "gitlab.com/image_6:latest", "s3Path": "path/image_6.txt"}, 
     ]);
 
     db.challenge_builder.insertMany([
       {
-        corId: "cb123",
-        creatorName: "cs302",
-        challengeName: "first_challenge",
-        imageName: "first_image",
-        participants: [
-          {email: "abc@zxc.com", status: false},
-          {email: "zxc@google.com", status: false},
-          {email: "dontdie@me.com", status: false}
-        ]
+        "corId": "653b4107e48671b05b0f12f9",
+        "creatorName": "cs302",
+        "imageName": "image_0",
+        "participants": [
+          "challenger48@google.com",
+          "challenger76@google.com",
+          "challenger26@google.com"
+        ],
+        "assignmentId": "653b4107e48671b05b0f12fa"
       },
       {
-        corId: "cb124",
-        creatorName: "cs302",
-        challengeName: "second_challenge",
-        imageName: "another_image",
-        participants: [
-          {email: "abc@zxc.com", status: false},
-          {email: "zxc@google.com", status: false},
-          {email: "dontdie@me.com", status: false}
-        ]
+        "corId": "653b4107e48671b05b0f12fb",
+        "creatorName": "cs302",
+        "imageName": "image_1",
+        "participants": [
+          "challenger49@google.com",
+          "challenger53@google.com",
+          "challenger36@google.com"
+        ],
+        "assignmentId": "653b4107e48671b05b0f12fc"
       },
+      {
+        "corId": "653b4107e48671b05b0f12fd",
+        "creatorName": "cs302",
+        "imageName": "image_2",
+        "participants": [
+          "challenger97@google.com",
+          "challenger66@google.com",
+          "challenger88@google.com"
+        ],
+        "assignmentId": "653b4107e48671b05b0f12fe"
+      },
+      {
+        "corId": "653b4107e48671b05b0f12ff",
+        "creatorName": "cs302",
+        "imageName": "image_3",
+        "participants": [
+          "challenger90@google.com",
+          "challenger68@google.com",
+          "challenger14@google.com"
+        ],
+        "assignmentId": "653b4107e48671b05b0f1300"
+      },
+      {
+        "corId": "653b4107e48671b05b0f1301",
+        "creatorName": "cs302",
+        "imageName": "image_4",
+        "participants": [
+          "challenger17@google.com",
+          "challenger46@google.com",
+          "challenger91@google.com"
+        ],
+        "assignmentId": "653b4107e48671b05b0f1302"
+      }
     ]);
 
     db.process_engine.insertMany([
-      {
-        corId: "pe123",
-        creatorName: "cs302",
-        imageName: "first_image",
-        s3Path: "path/first_image.txt",
-        eventSuccess: true,
-        timestamp: new Date("2023-10-21T10:00:53.805Z"),
-      },
-      {
-        corId: "pe124",
-        creatorName: "cs302",
-        imageName: "another_image",
-        s3Path: "path/another_image.txt",
-        eventSuccess: true,
-        timestamp: new Date("2023-10-21T10:00:53.805Z"),
-      }
+      {"corId": "653b2e8cea6d1925edee6376", "creatorName": "cs302", "imageName": "image_0", "s3Path": "path/image_0.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee6377", "creatorName": "cs302", "imageName": "image_1", "s3Path": "path/image_1.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee6378", "creatorName": "cs302", "imageName": "image_2", "s3Path": "path/image_2.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee6379", "creatorName": "cs302", "imageName": "image_3", "s3Path": "path/image_3.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee637a", "creatorName": "cs302", "imageName": "image_4", "s3Path": "path/image_4.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee637b", "creatorName": "cs302", "imageName": "image_5", "s3Path": "path/image_5.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee637c", "creatorName": "cs302", "imageName": "image_6", "s3Path": "path/image_6.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee637d", "creatorName": "cs302", "imageName": "image_7", "s3Path": "path/image_7.txt", "eventSuccess": false, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee637e", "creatorName": "cs302", "imageName": "image_8", "s3Path": "path/image_8.txt", "eventSuccess": false, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee637f", "creatorName": "cs302", "imageName": "image_9", "s3Path": "path/image_9.txt", "eventSuccess": false, "timestamp": "2023-10-27 13:03:22.954691"}
     ]);
 ## @param initdbScriptsConfigMap Existing ConfigMap with custom initdb scripts
 ##
