--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -417,74 +417,29 @@ initdbScripts:
     ]);
 
     db.challenge_builder.insertMany([
-      {
-        "corId": "653b4107e48671b05b0f12f9",
-        "creatorName": "cs302",
-        "imageName": "image_0",
-        "participants": [
-          "challenger48@google.com",
-          "challenger76@google.com",
-          "challenger26@google.com"
-        ],
-        "assignmentId": "653b4107e48671b05b0f12fa"
-      },
-      {
-        "corId": "653b4107e48671b05b0f12fb",
-        "creatorName": "cs302",
-        "imageName": "image_1",
-        "participants": [
-          "challenger49@google.com",
-          "challenger53@google.com",
-          "challenger36@google.com"
-        ],
-        "assignmentId": "653b4107e48671b05b0f12fc"
-      },
-      {
-        "corId": "653b4107e48671b05b0f12fd",
-        "creatorName": "cs302",
-        "imageName": "image_2",
-        "participants": [
-          "challenger97@google.com",
-          "challenger66@google.com",
-          "challenger88@google.com"
-        ],
-        "assignmentId": "653b4107e48671b05b0f12fe"
-      },
-      {
-        "corId": "653b4107e48671b05b0f12ff",
-        "creatorName": "cs302",
-        "imageName": "image_3",
-        "participants": [
-          "challenger90@google.com",
-          "challenger68@google.com",
-          "challenger14@google.com"
-        ],
-        "assignmentId": "653b4107e48671b05b0f1300"
-      },
-      {
-        "corId": "653b4107e48671b05b0f1301",
-        "creatorName": "cs302",
-        "imageName": "image_4",
-        "participants": [
-          "challenger17@google.com",
-          "challenger46@google.com",
-          "challenger91@google.com"
-        ],
-        "assignmentId": "653b4107e48671b05b0f1302"
-      }
-    ]);
+      {"corId": "653b4c0fb1a622bea03dae3b", "creatorName": "cs302", "imageName": "image_0", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "assignmentId": "653b4c0fb1a622bea03dae3c"}, 
+      {"corId": "653b4c0fb1a622bea03dae3d", "creatorName": "cs302", "imageName": "image_1", "duration": 65, "participants": ["challenger77@google.com", "challenger45@google.com", "challenger34@google.com"], "assignmentId": "653b4c0fb1a622bea03dae3e"}, 
+      {"corId": "653b4c0fb1a622bea03dae3f", "creatorName": "cs302", "imageName": "image_2", "duration": 70, "participants": ["challenger98@google.com", "challenger17@google.com", "challenger60@google.com"], "assignmentId": "653b4c0fb1a622bea03dae40"}, 
+      {"corId": "653b4c0fb1a622bea03dae41", "creatorName": "cs302", "imageName": "image_3", "duration": 75, "participants": ["challenger48@google.com", "challenger47@google.com", "challenger93@google.com"], "assignmentId": "653b4c0fb1a622bea03dae42"},
+      {"corId": "653b4c0fb1a622bea03dae43", "creatorName": "cs302", "imageName": "image_4", "duration": 80, "participants": ["challenger28@google.com", "challenger90@google.com", "challenger40@google.com"], "assignmentId": "653b4c0fb1a622bea03dae44"}]
+    );
 
     db.process_engine.insertMany([
-      {"corId": "653b2e8cea6d1925edee6376", "creatorName": "cs302", "imageName": "image_0", "s3Path": "path/image_0.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
-      {"corId": "653b2e8cea6d1925edee6377", "creatorName": "cs302", "imageName": "image_1", "s3Path": "path/image_1.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
-      {"corId": "653b2e8cea6d1925edee6378", "creatorName": "cs302", "imageName": "image_2", "s3Path": "path/image_2.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
-      {"corId": "653b2e8cea6d1925edee6379", "creatorName": "cs302", "imageName": "image_3", "s3Path": "path/image_3.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
-      {"corId": "653b2e8cea6d1925edee637a", "creatorName": "cs302", "imageName": "image_4", "s3Path": "path/image_4.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
-      {"corId": "653b2e8cea6d1925edee637b", "creatorName": "cs302", "imageName": "image_5", "s3Path": "path/image_5.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
-      {"corId": "653b2e8cea6d1925edee637c", "creatorName": "cs302", "imageName": "image_6", "s3Path": "path/image_6.txt", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
-      {"corId": "653b2e8cea6d1925edee637d", "creatorName": "cs302", "imageName": "image_7", "s3Path": "path/image_7.txt", "eventSuccess": false, "timestamp": "2023-10-27 13:03:22.954691"}, 
-      {"corId": "653b2e8cea6d1925edee637e", "creatorName": "cs302", "imageName": "image_8", "s3Path": "path/image_8.txt", "eventSuccess": false, "timestamp": "2023-10-27 13:03:22.954691"}, 
-      {"corId": "653b2e8cea6d1925edee637f", "creatorName": "cs302", "imageName": "image_9", "s3Path": "path/image_9.txt", "eventSuccess": false, "timestamp": "2023-10-27 13:03:22.954691"}
+      {"corId": "653b2e8cea6d1925edee6376", "creatorName": "cs302", "imageName": "image_0", "event": "Image Created", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954692"}, 
+      {"corId": "653b2e8cea6d1925edee6377", "creatorName": "cs302", "imageName": "image_1", "event": "Image Created", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954693"}, 
+      {"corId": "653b2e8cea6d1925edee6378", "creatorName": "cs302", "imageName": "image_2", "event": "Image Created", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee6379", "creatorName": "cs302", "imageName": "image_3", "event": "Image Created", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954694"}, 
+      {"corId": "653b2e8cea6d1925edee637a", "creatorName": "cs302", "imageName": "image_4", "event": "Image Created", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954695"}, 
+      {"corId": "653b2e8cea6d1925edee637b", "creatorName": "cs302", "imageName": "image_5", "event": "Image Created", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954690"}, 
+      {"corId": "653b2e8cea6d1925edee637c", "creatorName": "cs302", "imageName": "image_6", "event": "Image Created", "eventSuccess": true, "timestamp": "2023-10-27 13:03:22.954694"}, 
+      {"corId": "653b2e8cea6d1925edee637d", "creatorName": "cs302", "imageName": "image_7", "event": "Failed to create", "eventSuccess": false, "timestamp": "2023-10-27 13:03:22.954691"}, 
+      {"corId": "653b2e8cea6d1925edee637e", "creatorName": "cs302", "imageName": "image_8", "event": "Received trigger to start image creation", "eventSuccess": false, "timestamp": "2023-10-27 13:03:22.954698"}, 
+      {"corId": "653b2e8cea6d1925edee637f", "creatorName": "cs302", "imageName": "image_9", "event": "Received trigger to start image creation", "eventSuccess": false, "timestamp": "2023-10-27 13:03:22.954699"},
+      {"corId": "653b4c0fb1a622bea03dae3b", "creatorName": "cs302", "imageName": "image_0", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "event": "Received trigger to start challenge creation", "assignmentId": "653b4c0fb1a622bea03dae3c", "timestamp": "2023-10-27 13:35:11.049563"}, 
+      {"corId": "653b4c0fb1a622bea03dae3d", "creatorName": "cs302", "imageName": "image_1", "duration": 65, "participants": ["challenger77@google.com", "challenger45@google.com", "challenger34@google.com"], "event": "Received trigger to start challenge creation", "assignmentId": "653b4c0fb1a622bea03dae3e", "timestamp": "2023-10-27 13:35:11.049573"}, 
+      {"corId": "653b4c0fb1a622bea03dae3f", "creatorName": "cs302", "imageName": "image_2", "duration": 70, "participants": ["challenger98@google.com", "challenger17@google.com", "challenger60@google.com"], "event": "Received trigger to start challenge creation", "assignmentId": "653b4c0fb1a622bea03dae40", "timestamp": "2023-10-27 13:35:11.049582"}, 
+      {"corId": "653b4c0fb1a622bea03dae41", "creatorName": "cs302", "imageName": "image_3", "duration": 75, "participants": ["challenger48@google.com", "challenger47@google.com", "challenger93@google.com"], "event": "Received trigger to start challenge creation", "assignmentId": "653b4c0fb1a622bea03dae42", "timestamp": "2023-10-27 13:35:11.049590"},
+      {"corId": "653b4c0fb1a622bea03dae43", "creatorName": "cs302", "imageName": "image_4", "duration": 80, "participants": ["challenger28@google.com", "challenger90@google.com", "challenger40@google.com"], "event": "Received trigger to start challenge creation", "assignmentId": "653b4c0fb1a622bea03dae44", "timestamp": "2023-10-27 13:35:11.049595"}]
     ]);
 ## @param initdbScriptsConfigMap Existing ConfigMap with custom initdb scripts
 ##
