--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -403,7 +403,7 @@ initdbScripts:
   my_init_script.js: |
     db = db.getSiblingDB("cob");
     db.image_builder.drop();
-    db.challenge_builder.drop();
+    db.challenge.drop();
     db.process_engine.drop();
 
     db.image_builder.insertMany([
@@ -416,7 +416,7 @@ initdbScripts:
       {"corId": "653b2e8cea6d1925edee637c", "creatorName": "cs302", "imageName": "image_6", "imageRegistryLink": "gitlab.com/image_6:latest", "s3Path": "path/image_6.txt"}, 
     ]);
 
-    db.challenge_builder.insertMany([
+    db.challenge.insertMany([
       {"corId": "653b4c0fb1a622bea03dae3b", "creatorName": "cs302", "imageName": "image_0", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "assignmentId": "653b4c0fb1a622bea03dae3c"}, 
       {"corId": "653b4c0fb1a622bea03dae3d", "creatorName": "cs302", "imageName": "image_1", "duration": 65, "participants": ["challenger77@google.com", "challenger45@google.com", "challenger34@google.com"], "assignmentId": "653b4c0fb1a622bea03dae3e"}, 
       {"corId": "653b4c0fb1a622bea03dae3f", "creatorName": "cs302", "imageName": "image_2", "duration": 70, "participants": ["challenger98@google.com", "challenger17@google.com", "challenger60@google.com"], "assignmentId": "653b4c0fb1a622bea03dae40"}, 
