--- a/helm/dev.values.yaml
+++ b/helm/dev.values.yaml
@@ -417,11 +417,11 @@ initdbScripts:
     ]);
 
     db.challenge.insertMany([
-      {"corId": "653b4c0fb1a622bea03dae3b", "creatorName": "cs302", "imageName": "image_0", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "assignmentId": "653b4c0fb1a622bea03dae3c"}, 
-      {"corId": "653b4c0fb1a622bea03dae3d", "creatorName": "cs302", "imageName": "image_1", "duration": 65, "participants": ["challenger77@google.com", "challenger45@google.com", "challenger34@google.com"], "assignmentId": "653b4c0fb1a622bea03dae3e"}, 
-      {"corId": "653b4c0fb1a622bea03dae3f", "creatorName": "cs302", "imageName": "image_2", "duration": 70, "participants": ["challenger98@google.com", "challenger17@google.com", "challenger60@google.com"], "assignmentId": "653b4c0fb1a622bea03dae40"}, 
-      {"corId": "653b4c0fb1a622bea03dae41", "creatorName": "cs302", "imageName": "image_3", "duration": 75, "participants": ["challenger48@google.com", "challenger47@google.com", "challenger93@google.com"], "assignmentId": "653b4c0fb1a622bea03dae42"},
-      {"corId": "653b4c0fb1a622bea03dae43", "creatorName": "cs302", "imageName": "image_4", "duration": 80, "participants": ["challenger28@google.com", "challenger90@google.com", "challenger40@google.com"], "assignmentId": "653b4c0fb1a622bea03dae44"}]
+      {"challengeName": "challenge_1", "corId": "653b4c0fb1a622bea03dae3b", "creatorName": "cs302", "imageName": "image_0", "duration": 60, "participants": ["challenger85@google.com", "challenger74@google.com", "challenger100@google.com"], "assignmentId": "653b4c0fb1a622bea03dae3c"}, 
+      {"challengeName": "challenge_1", "corId": "653b4c0fb1a622bea03dae3d", "creatorName": "cs302", "imageName": "image_1", "duration": 65, "participants": ["challenger77@google.com", "challenger45@google.com", "challenger34@google.com"], "assignmentId": "653b4c0fb1a622bea03dae3e"}, 
+      {"challengeName": "challenge_1", "corId": "653b4c0fb1a622bea03dae3f", "creatorName": "cs302", "imageName": "image_2", "duration": 70, "participants": ["challenger98@google.com", "challenger17@google.com", "challenger60@google.com"], "assignmentId": "653b4c0fb1a622bea03dae40"}, 
+      {"challengeName": "challenge_1", "corId": "653b4c0fb1a622bea03dae41", "creatorName": "cs302", "imageName": "image_3", "duration": 75, "participants": ["challenger48@google.com", "challenger47@google.com", "challenger93@google.com"], "assignmentId": "653b4c0fb1a622bea03dae42"},
+      {"challengeName": "challenge_1", "corId": "653b4c0fb1a622bea03dae43", "creatorName": "cs302", "imageName": "image_4", "duration": 80, "participants": ["challenger28@google.com", "challenger90@google.com", "challenger40@google.com"], "assignmentId": "653b4c0fb1a622bea03dae44"}]
     );
 
     db.process_engine.insertMany([
